--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,3 +37,40 @@ code .sql-hl-function {
 code .sql-hl-string {
   @apply text-[#ce9178];
 }
+
+.summary-container * {
+  @apply leading-loose;
+}
+
+.summary-container ol,
+.summary-container ul {
+  @apply list-inside mb-2 pl-2 lg:pl-4;
+}
+
+.summary-container ol {
+  @apply list-decimal;
+}
+
+.summary-container li::marker {
+  @apply text-base;
+}
+
+.summary-container li > p {
+  @apply inline;
+}
+
+.summary-container h3 {
+  @apply text-xl font-bold;
+}
+
+.summary-container h4 {
+  @apply text-lg font-bold;
+}
+
+.summary-container h5 {
+  @apply text-lg font-medium;
+}
+
+.summary-container p {
+  @apply leading-8 mb-2;
+}
